# bitbucket-mcp

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml  test.yml
src/bitbucket_mcp/: __init__.py  __main__.py  client.py  config.py  server.py
tests/: __init__.py  test_client.py  test_config.py  test_server.py
