[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bitbucket-mcp"
version = "0.3.0"
description = "MCP server for Bitbucket Cloud API - pull requests, branches, repositories"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Martin Hlavacek", email = "martin@hlavacek.dev" }
]
keywords = ["mcp", "bitbucket", "api", "pull-request", "ai", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "respx>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/martinhlavacek/bitbucket-mcp"
Documentation = "https://github.com/martinhlavacek/bitbucket-mcp#readme"
Repository = "https://github.com/martinhlavacek/bitbucket-mcp"
Issues = "https://github.com/martinhlavacek/bitbucket-mcp/issues"

[project.scripts]
bitbucket-mcp = "bitbucket_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/bitbucket_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["bitbucket_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.coverage.run]
source = ["src/bitbucket_mcp"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
